crates/dora-compiler/src/dora/tests/snapshots/dora_compiler__dora__tests__operations__push_calldatacopy.snap
---
source: crates/dora-compiler/src/dora/tests/operations.rs
expression: op
snapshot_kind: text
---
module {
  llvm.mlir.global internal @dora_global_stack_ptr() {addr_space = 0 : i32} : !llvm.ptr
  llvm.mlir.global internal @dora_global_stack_length() {addr_space = 0 : i32} : i64
  llvm.mlir.global internal @dora_global_memory_ptr() {addr_space = 0 : i32} : !llvm.ptr
  llvm.mlir.global internal @dora_global_memory_size() {addr_space = 0 : i32} : i64
  llvm.mlir.global internal @dora_global_calldata_ptr() {addr_space = 0 : i32} : !llvm.ptr
  llvm.mlir.global internal @dora_global_calldata_size() {addr_space = 0 : i32} : i64
  llvm.mlir.global internal @dora_global_gas_counter() {addr_space = 0 : i32} : i64
  llvm.mlir.global external @dora_global_ctx_is_static() {addr_space = 0 : i32} : !llvm.ptr
  func.func private @dora_fn_tracing(!llvm.ptr, i8, i64)
  func.func private @dora_fn_write_result(!llvm.ptr, i64, i64, i64, i8)
  func.func private @dora_fn_keccak256_hasher(!llvm.ptr, i64, i64, !llvm.ptr)
  func.func private @dora_fn_calldata(!llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_calldata_size(!llvm.ptr) -> i64
  func.func private @dora_fn_chainid(!llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_callvalue(!llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_caller(!llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_store_in_gasprice_ptr(!llvm.ptr, !llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_store_in_selfbalance_ptr(!llvm.ptr, !llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_store_in_blobbasefee_ptr(!llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_gaslimit(!llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_extend_memory(!llvm.ptr, i64) -> !llvm.ptr
  func.func private @dora_fn_code_copy(!llvm.ptr, i64, i64, i64) -> !llvm.ptr
  func.func private @dora_fn_sload(!llvm.ptr, !llvm.ptr, !llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_sstore(!llvm.ptr, !llvm.ptr, !llvm.ptr, i64) -> !llvm.ptr
  func.func private @dora_fn_append_log(!llvm.ptr, i64, i64)
  func.func private @dora_fn_append_log_with_one_topic(!llvm.ptr, i64, i64, !llvm.ptr)
  func.func private @dora_fn_append_log_with_two_topics(!llvm.ptr, i64, i64, !llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_append_log_with_three_topics(!llvm.ptr, i64, i64, !llvm.ptr, !llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_append_log_with_four_topics(!llvm.ptr, i64, i64, !llvm.ptr, !llvm.ptr, !llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_origin(!llvm.ptr, !llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_coinbase(!llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_block_number(!llvm.ptr, !llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_extcodesize(!llvm.ptr, !llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_address(!llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_prevrando(!llvm.ptr, !llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_store_in_timestamp_ptr(!llvm.ptr, !llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_store_in_basefee_ptr(!llvm.ptr, !llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_call(!llvm.ptr, i64, !llvm.ptr, !llvm.ptr, i64, i64, i64, i64, i64, i8) -> !llvm.ptr
  func.func private @dora_fn_store_in_balance(!llvm.ptr, !llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_ext_code_copy(!llvm.ptr, !llvm.ptr, i64, i64, i64) -> !llvm.ptr
  func.func private @dora_fn_blob_hash(!llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_block_hash(!llvm.ptr, !llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_ext_code_hash(!llvm.ptr, !llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_create(!llvm.ptr, i64, i64, !llvm.ptr, i64) -> !llvm.ptr
  func.func private @dora_fn_create2(!llvm.ptr, i64, i64, !llvm.ptr, i64, !llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_returndata_size(!llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_returndata_copy(!llvm.ptr, i64, i64, i64) -> !llvm.ptr
  func.func private @dora_fn_selfdestruct(!llvm.ptr, !llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_transient_storage_read(!llvm.ptr, !llvm.ptr, !llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_transient_storage_write(!llvm.ptr, !llvm.ptr, !llvm.ptr) -> !llvm.ptr
  func.func public @main(%arg0: !llvm.ptr, %arg1: i64) -> i8 attributes {llvm.emit_c_interface} {
    %c1024_i256 = arith.constant 1024 : i256
    %0 = llvm.alloca %c1024_i256 x i256 : (i256) -> !llvm.ptr
    %1 = llvm.mlir.addressof @dora_global_stack_ptr : !llvm.ptr
    llvm.store %0, %1 : !llvm.ptr, !llvm.ptr
    %c0_i64 = arith.constant 0 : i64
    %2 = llvm.mlir.addressof @dora_global_stack_length : !llvm.ptr
    llvm.store %c0_i64, %2 : i64, !llvm.ptr
    %c0_i64_0 = arith.constant 0 : i64
    %3 = llvm.mlir.addressof @dora_global_memory_size : !llvm.ptr
    llvm.store %c0_i64_0, %3 : i64, !llvm.ptr
    %4 = call @dora_fn_calldata(%arg0) : (!llvm.ptr) -> !llvm.ptr
    %5 = llvm.mlir.addressof @dora_global_calldata_ptr : !llvm.ptr
    llvm.store %4, %5 : !llvm.ptr, !llvm.ptr
    %6 = call @dora_fn_calldata_size(%arg0) : (!llvm.ptr) -> i64
    %7 = llvm.mlir.addressof @dora_global_calldata_size : !llvm.ptr
    llvm.store %6, %7 : i64, !llvm.ptr
    %8 = llvm.mlir.addressof @dora_global_gas_counter : !llvm.ptr
    llvm.store %arg1, %8 : i64, !llvm.ptr
    cf.br ^bb5
  ^bb1(%9: i8):  // 15 preds: ^bb2, ^bb4, ^bb5, ^bb8, ^bb9, ^bb12, ^bb13, ^bb15, ^bb16, ^bb17, ^bb20, ^bb21, ^bb24, ^bb27, ^bb28
    %c0_i64_1 = arith.constant 0 : i64
    %10 = llvm.mlir.addressof @dora_global_gas_counter : !llvm.ptr
    %11 = llvm.load %10 : !llvm.ptr -> i64
    call @dora_fn_write_result(%arg0, %c0_i64_1, %c0_i64_1, %11, %9) : (!llvm.ptr, i64, i64, i64, i8) -> ()
    return %9 : i8
  ^bb2(%12: i256):  // no predecessors
    %c89_i8 = arith.constant 89 : i8
    cf.switch %12 : i256, [
      default: ^bb1(%c89_i8 : i8)
    ]
  ^bb3:  // pred: ^bb4
    %c32_i256 = arith.constant 32 : i256
    %13 = llvm.mlir.addressof @dora_global_stack_ptr : !llvm.ptr
    %14 = llvm.load %13 : !llvm.ptr -> !llvm.ptr
    llvm.store %c32_i256, %14 : i256, !llvm.ptr
    %15 = llvm.getelementptr %14[1] : (!llvm.ptr) -> !llvm.ptr, i256
    llvm.store %15, %13 : !llvm.ptr, !llvm.ptr
    cf.br ^bb9
  ^bb4:  // pred: ^bb6
    %16 = llvm.mlir.addressof @dora_global_stack_length : !llvm.ptr
    %c1024_i64 = arith.constant 1024 : i64
    %17 = llvm.load %16 : !llvm.ptr -> i64
    %c1_i64 = arith.constant 1 : i64
    %18 = arith.addi %17, %c1_i64 : i64
    llvm.store %18, %16 : i64, !llvm.ptr
    %19 = arith.cmpi ult, %c1024_i64, %18 : i64
    %c92_i8 = arith.constant 92 : i8
    cf.cond_br %19, ^bb1(%c92_i8 : i8), ^bb3
  ^bb5:  // pred: ^bb0
    %20 = llvm.mlir.addressof @dora_global_gas_counter : !llvm.ptr
    %21 = llvm.load %20 : !llvm.ptr -> i64
    %c3_i64 = arith.constant 3 : i64
    %22 = arith.cmpi uge, %21, %c3_i64 : i64
    %c80_i8 = arith.constant 80 : i8
    cf.cond_br %22, ^bb6, ^bb1(%c80_i8 : i8)
  ^bb6:  // pred: ^bb5
    %23 = arith.subi %21, %c3_i64 : i64
    llvm.store %23, %20 : i64, !llvm.ptr
    cf.br ^bb4
  ^bb7:  // pred: ^bb8
    %c0_i256 = arith.constant 0 : i256
    %24 = llvm.mlir.addressof @dora_global_stack_ptr : !llvm.ptr
    %25 = llvm.load %24 : !llvm.ptr -> !llvm.ptr
    llvm.store %c0_i256, %25 : i256, !llvm.ptr
    %26 = llvm.getelementptr %25[1] : (!llvm.ptr) -> !llvm.ptr, i256
    llvm.store %26, %24 : !llvm.ptr, !llvm.ptr
    cf.br ^bb13
  ^bb8:  // pred: ^bb10
    %27 = llvm.mlir.addressof @dora_global_stack_length : !llvm.ptr
    %c1024_i64_2 = arith.constant 1024 : i64
    %28 = llvm.load %27 : !llvm.ptr -> i64
    %c1_i64_3 = arith.constant 1 : i64
    %29 = arith.addi %28, %c1_i64_3 : i64
    llvm.store %29, %27 : i64, !llvm.ptr
    %30 = arith.cmpi ult, %c1024_i64_2, %29 : i64
    %c92_i8_4 = arith.constant 92 : i8
    cf.cond_br %30, ^bb1(%c92_i8_4 : i8), ^bb7
  ^bb9:  // pred: ^bb3
    %31 = llvm.mlir.addressof @dora_global_gas_counter : !llvm.ptr
    %32 = llvm.load %31 : !llvm.ptr -> i64
    %c3_i64_5 = arith.constant 3 : i64
    %33 = arith.cmpi uge, %32, %c3_i64_5 : i64
    %c80_i8_6 = arith.constant 80 : i8
    cf.cond_br %33, ^bb10, ^bb1(%c80_i8_6 : i8)
  ^bb10:  // pred: ^bb9
    %34 = arith.subi %32, %c3_i64_5 : i64
    llvm.store %34, %31 : i64, !llvm.ptr
    cf.br ^bb8
  ^bb11:  // pred: ^bb12
    %c0_i256_7 = arith.constant 0 : i256
    %35 = llvm.mlir.addressof @dora_global_stack_ptr : !llvm.ptr
    %36 = llvm.load %35 : !llvm.ptr -> !llvm.ptr
    llvm.store %c0_i256_7, %36 : i256, !llvm.ptr
    %37 = llvm.getelementptr %36[1] : (!llvm.ptr) -> !llvm.ptr, i256
    llvm.store %37, %35 : !llvm.ptr, !llvm.ptr
    cf.br ^bb21
  ^bb12:  // pred: ^bb14
    %38 = llvm.mlir.addressof @dora_global_stack_length : !llvm.ptr
    %c1024_i64_8 = arith.constant 1024 : i64
    %39 = llvm.load %38 : !llvm.ptr -> i64
    %c1_i64_9 = arith.constant 1 : i64
    %40 = arith.addi %39, %c1_i64_9 : i64
    llvm.store %40, %38 : i64, !llvm.ptr
    %41 = arith.cmpi ult, %c1024_i64_8, %40 : i64
    %c92_i8_10 = arith.constant 92 : i8
    cf.cond_br %41, ^bb1(%c92_i8_10 : i8), ^bb11
  ^bb13:  // pred: ^bb7
    %42 = llvm.mlir.addressof @dora_global_gas_counter : !llvm.ptr
    %43 = llvm.load %42 : !llvm.ptr -> i64
    %c3_i64_11 = arith.constant 3 : i64
    %44 = arith.cmpi uge, %43, %c3_i64_11 : i64
    %c80_i8_12 = arith.constant 80 : i8
    cf.cond_br %44, ^bb14, ^bb1(%c80_i8_12 : i8)
  ^bb14:  // pred: ^bb13
    %45 = arith.subi %43, %c3_i64_11 : i64
    llvm.store %45, %42 : i64, !llvm.ptr
    cf.br ^bb12
  ^bb15:  // pred: ^bb20
    %46 = llvm.mlir.addressof @dora_global_stack_ptr : !llvm.ptr
    %47 = llvm.load %46 : !llvm.ptr -> !llvm.ptr
    %48 = llvm.getelementptr %47[-1] : (!llvm.ptr) -> !llvm.ptr, i256
    %49 = llvm.load %48 : !llvm.ptr -> i256
    llvm.store %48, %46 : !llvm.ptr, !llvm.ptr
    %50 = llvm.mlir.addressof @dora_global_stack_ptr : !llvm.ptr
    %51 = llvm.load %50 : !llvm.ptr -> !llvm.ptr
    %52 = llvm.getelementptr %51[-1] : (!llvm.ptr) -> !llvm.ptr, i256
    %53 = llvm.load %52 : !llvm.ptr -> i256
    llvm.store %52, %50 : !llvm.ptr, !llvm.ptr
    %54 = llvm.mlir.addressof @dora_global_stack_ptr : !llvm.ptr
    %55 = llvm.load %54 : !llvm.ptr -> !llvm.ptr
    %56 = llvm.getelementptr %55[-1] : (!llvm.ptr) -> !llvm.ptr, i256
    %57 = llvm.load %56 : !llvm.ptr -> i256
    llvm.store %56, %54 : !llvm.ptr, !llvm.ptr
    %58 = arith.trunci %53 : i256 to i64
    %c0_i64_13 = arith.constant 0 : i64
    %59 = arith.cmpi slt, %58, %c0_i64_13 : i64
    %c84_i8 = arith.constant 84 : i8
    cf.cond_br %59, ^bb1(%c84_i8 : i8), ^bb16
  ^bb16:  // pred: ^bb15
    %60 = arith.trunci %49 : i256 to i64
    %c0_i64_14 = arith.constant 0 : i64
    %61 = arith.cmpi slt, %60, %c0_i64_14 : i64
    %c84_i8_15 = arith.constant 84 : i8
    cf.cond_br %61, ^bb1(%c84_i8_15 : i8), ^bb17
  ^bb17:  // pred: ^bb16
    %62 = arith.trunci %57 : i256 to i64
    %c0_i64_16 = arith.constant 0 : i64
    %63 = arith.cmpi slt, %62, %c0_i64_16 : i64
    %c84_i8_17 = arith.constant 84 : i8
    cf.cond_br %63, ^bb1(%c84_i8_17 : i8), ^bb18
  ^bb18:  // pred: ^bb17
    %c0_i64_18 = arith.constant 0 : i64
    %64 = arith.cmpi ne, %62, %c0_i64_18 : i64
    cf.cond_br %64, ^bb24, ^bb19
  ^bb19:  // 2 preds: ^bb18, ^bb26
    %65 = llvm.mlir.addressof @dora_global_memory_ptr : !llvm.ptr
    %66 = llvm.load %65 : !llvm.ptr -> !llvm.ptr
    %67 = llvm.getelementptr %66[%60] : (!llvm.ptr, i64) -> !llvm.ptr, i8
    %68 = call @dora_fn_calldata_size(%arg0) : (!llvm.ptr) -> i64
    %69 = arith.cmpi ult, %58, %68 : i64
    scf.if %69 {
      %111 = arith.subi %68, %58 : i64
      %112 = arith.minui %111, %62 : i64
      %113 = func.call @dora_fn_calldata(%arg0) : (!llvm.ptr) -> !llvm.ptr
      %114 = llvm.getelementptr %113[%58] : (!llvm.ptr, i64) -> !llvm.ptr, i8
      "llvm.intr.memcpy"(%67, %114, %112) <{isVolatile = false}> : (!llvm.ptr, !llvm.ptr, i64) -> ()
    } else {
    }
    cf.br ^bb23
  ^bb20:  // pred: ^bb22
    %70 = llvm.mlir.addressof @dora_global_stack_length : !llvm.ptr
    %c1024_i64_19 = arith.constant 1024 : i64
    %71 = llvm.load %70 : !llvm.ptr -> i64
    %c-3_i64 = arith.constant -3 : i64
    %72 = arith.addi %71, %c-3_i64 : i64
    llvm.store %72, %70 : i64, !llvm.ptr
    %c3_i64_20 = arith.constant 3 : i64
    %73 = arith.cmpi ult, %71, %c3_i64_20 : i64
    %c91_i8 = arith.constant 91 : i8
    cf.cond_br %73, ^bb1(%c91_i8 : i8), ^bb15
  ^bb21:  // pred: ^bb11
    %74 = llvm.mlir.addressof @dora_global_gas_counter : !llvm.ptr
    %75 = llvm.load %74 : !llvm.ptr -> i64
    %c3_i64_21 = arith.constant 3 : i64
    %76 = arith.cmpi uge, %75, %c3_i64_21 : i64
    %c80_i8_22 = arith.constant 80 : i8
    cf.cond_br %76, ^bb22, ^bb1(%c80_i8_22 : i8)
  ^bb22:  // pred: ^bb21
    %77 = arith.subi %75, %c3_i64_21 : i64
    llvm.store %77, %74 : i64, !llvm.ptr
    cf.br ^bb20
  ^bb23:  // pred: ^bb19
    %c0_i64_23 = arith.constant 0 : i64
    %c1_i8 = arith.constant 1 : i8
    %78 = llvm.mlir.addressof @dora_global_gas_counter : !llvm.ptr
    %79 = llvm.load %78 : !llvm.ptr -> i64
    call @dora_fn_write_result(%arg0, %c0_i64_23, %c0_i64_23, %79, %c1_i8) : (!llvm.ptr, i64, i64, i64, i8) -> ()
    return %c1_i8 : i8
  ^bb24:  // pred: ^bb18
    %80 = arith.addi %60, %62 : i64
    %c0_i64_24 = arith.constant 0 : i64
    %81 = arith.cmpi slt, %80, %c0_i64_24 : i64
    %c84_i8_25 = arith.constant 84 : i8
    cf.cond_br %81, ^bb1(%c84_i8_25 : i8), ^bb25
  ^bb25:  // pred: ^bb24
    %c31_i64 = arith.constant 31 : i64
    %c32_i64 = arith.constant 32 : i64
    %82 = arith.addi %80, %c31_i64 : i64
    %83 = arith.divui %82, %c32_i64 : i64
    %c32_i64_26 = arith.constant 32 : i64
    %84 = arith.muli %83, %c32_i64_26 : i64
    %85 = llvm.mlir.addressof @dora_global_memory_size : !llvm.ptr
    %86 = llvm.load %85 : !llvm.ptr -> i64
    %c31_i64_27 = arith.constant 31 : i64
    %c32_i64_28 = arith.constant 32 : i64
    %87 = arith.addi %86, %c31_i64_27 : i64
    %88 = arith.divui %87, %c32_i64_28 : i64
    %89 = arith.muli %88, %c32_i64_26 : i64
    %90 = arith.cmpi ult, %89, %84 : i64
    cf.cond_br %90, ^bb27, ^bb26
  ^bb26:  // 2 preds: ^bb25, ^bb29
    cf.br ^bb19
  ^bb27:  // pred: ^bb25
    %c3_i64_29 = arith.constant 3 : i64
    %c512_i64 = arith.constant 512 : i64
    %91 = arith.muli %88, %88 : i64
    %92 = arith.divui %91, %c512_i64 : i64
    %93 = arith.muli %88, %c3_i64_29 : i64
    %94 = arith.addi %92, %93 : i64
    %c3_i64_30 = arith.constant 3 : i64
    %c512_i64_31 = arith.constant 512 : i64
    %95 = arith.muli %83, %83 : i64
    %96 = arith.divui %95, %c512_i64_31 : i64
    %97 = arith.muli %83, %c3_i64_30 : i64
    %98 = arith.addi %96, %97 : i64
    %99 = arith.subi %98, %94 : i64
    %100 = llvm.mlir.addressof @dora_global_gas_counter : !llvm.ptr
    %101 = llvm.load %100 : !llvm.ptr -> i64
    %102 = arith.cmpi ult, %101, %99 : i64
    scf.if %102 {
    } else {
      %111 = arith.subi %101, %99 : i64
      llvm.store %111, %100 : i64, !llvm.ptr
    }
    %c80_i8_32 = arith.constant 80 : i8
    cf.cond_br %102, ^bb1(%c80_i8_32 : i8), ^bb28
  ^bb28:  // pred: ^bb27
    %103 = call @dora_fn_extend_memory(%arg0, %84) : (!llvm.ptr, i64) -> !llvm.ptr
    %104 = llvm.getelementptr %103[16] : (!llvm.ptr) -> !llvm.ptr, i8
    %105 = llvm.load %104 : !llvm.ptr -> !llvm.ptr
    %106 = llvm.getelementptr %103[0] : (!llvm.ptr) -> !llvm.ptr, i8
    %107 = llvm.load %106 : !llvm.ptr -> i8
    %c0_i8 = arith.constant 0 : i8
    %108 = arith.cmpi ne, %107, %c0_i8 : i8
    cf.cond_br %108, ^bb1(%107 : i8), ^bb29
  ^bb29:  // pred: ^bb28
    %109 = llvm.mlir.addressof @dora_global_memory_ptr : !llvm.ptr
    llvm.store %105, %109 : !llvm.ptr, !llvm.ptr
    %110 = llvm.mlir.addressof @dora_global_memory_size : !llvm.ptr
    llvm.store %84, %110 : i64, !llvm.ptr
    cf.br ^bb26
  }
}
